# netlist-parser

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
netlist_parser/: __main__.py
tests/: MEDIUM_ARTICLE.md  README.md  conftest.py  pyproject.toml  sample.cir  sample.scs  sample.spi  sample_cdl.spi  sample_continuation.spi  test_cli.py  test_exceptions.py  test_integration.py  test_parser.py
tests/examples/: basic_usage.py
tests/netlist_parser/: __init__.py  parser.py  utils.py
